# instrument-app

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
config/: DG1022Z.toml  config.toml
src/: main.rs  messages.rs  networking.rs  styles.rs
src/devices/: command.rs  mod.rs
src/screens/: command_selection.rs  mod.rs  settings.rs  toolbar.rs
