[package]
name = "instrument-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "*", features = ["glow"] }
serde = { version = "1.0.126", features = ["derive"] }
config = "0.11.0"
