[package]
name = "instrument-app"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4.0", features = ["glow"] }
serde = { version = "1.0.145", features = ["derive"] }
config = "0.11.0"
